  display_string()
	- Instead of using parse_mbchar()'s bad_chr parameter, use
	  mbrep() to get the representation of a bad character. (DLR)
	- If column is less than start_col and the character's a tab,
	  which can be possible if there are enough tabs and the
	  terminal size is sufficiently large, don't try to display it
	  using control_mbrep(). (DLR, found by Duncan Geoffry Doyle)
  edit_redraw(), edit_refresh()
	- Clean up and simplify. (DLR)
  edit_update()
	- Since we no longer use TOP, remove references to it.  Also,
	  don't call edit_refresh() anymore; it will call us. (DLR)
  do_statusbar_next_word()
	- Rework to be more like do_statusbar_prev_word(), to avoid a
	  potential problem if we start at the end of a line. (DLR)
  do_statusbar_input()
	- Call do_statusbar_mouse() instead of do_mouse(). (DLR)
  do_statusbar_output()
	- When adding a character, just add its length in bytes to
	  statusbar_x instead of calling do_statusbar_right(). (DLR)
  titlebar()
	- Rework to display only one space after the version number, so
	  that there's more room for other things, and to not display
	  the status when we're in the file browser, since Pico doesn't.
	  (DLR)
  do_credits()
	- Various cleanups.  Turn on the MORE_SPACE and NO_HELP flags
	  before showing the credits, so that they use as much of the
	  screen as possible, and set the flags back to their original
	  values afterward.  Also, call wscrl(1) instead of scroll(),
	  only call scrollok() just before and after we scroll, and
	  tweak where screen updates occur so that messages are properly
	  displayed when they first scroll onto the bottom line of the
	  screen. (DLR)
	- Add Mike Frysinger to credits. (DLR)
- configure.ac:
	- Since we only use vsnprintf() now, remove the tests for
	  snprintf(). (DLR)
	- Change the description of "sufficient wide character support"
	  to "sufficient UTF-8 support", as the latter is clearer. (DLR)
	- Update the description of the ENABLE_COLOR option to mention