@@ -336,6 +336,8 @@ CVS code -
 	  which can be possible if there are enough tabs and the
 	  terminal size is sufficiently large, don't try to display it
 	  using control_mbrep(). (DLR, found by Duncan Geoffry Doyle)
+	- Really avoid a memory corruption problem by allocating enough
+	  space for COLS characters. (DLR)
   edit_redraw(), edit_refresh()
 	- Clean up and simplify. (DLR)
   edit_update()
